syntax = "proto3";

package blog.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "pagination/pagination.proto";

option go_package = "kratos-blog/api/blog/v1;v1";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

service TagService {
  // 获取标签列表
  rpc ListTag (pagination.PagingRequest) returns (ListTagResponse) {
    option (google.api.http) = {
      get: "/blog/v1/tags"
    };
  }

  // 获取标签数据
  rpc GetTag (GetTagRequest) returns (Tag) {
    option (google.api.http) = {
      get: "/blog/v1/tags/{id}"
    };
  }

  // 创建标签
  rpc CreateTag (CreateTagRequest) returns (Tag) {
    option (google.api.http) = {
      post: "/blog/v1/tags"
      body: "*"
    };
  }

  // 更新标签
  rpc UpdateTag (UpdateTagRequest) returns (Tag) {
    option (google.api.http) = {
      put: "/blog/v1/tags/{id}"
      body: "tag"
    };
  }

  // 删除标签
  rpc DeleteTag (DeleteTagRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/tags/{id}"
    };
  }
}

message Tag {
  uint64 id = 1;
  optional string name = 2;
  optional string displayName = 3;
  optional string seoDesc = 4;
}

// 回应 - 标签列表
message ListTagResponse {
  repeated Tag items = 1;
  int32 total = 2;
}

// 请求 - 标签数据
message GetTagRequest {
  uint64 id = 1;
}

// 请求 - 创建标签
message CreateTagRequest {
  Tag tag = 1;
  optional uint64 operatorId = 2;
}

// 请求 - 更新标签
message UpdateTagRequest {
  uint64 id = 1;
  Tag tag = 2;
  optional uint64 operatorId = 3;
}

// 请求 - 删除标签
message DeleteTagRequest {
  uint64 id = 1;
  optional uint64 operatorId = 2;
}
